--- a/C#/LibraryManagement/LibraryManagement.csproj
+++ b/C#/LibraryManagement/LibraryManagement.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <!-- <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.2.3" /> -->
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
